# minishell

./: CMakeLists.txt  Makefile  README.md  author  minishell
incl/: minishell.h
mini_lib/: Makefile  README.md  TODO.md  author
mini_lib/incl/: libft.h  mini_lib.h
mini_lib/srcs/: a.out  bzero.c  ft_atoi.c  ft_count_words.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd.c  ft_lstdelone.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_strchr.c  ft_strclr.c  ft_striter.c  ft_strjoin.c  ft_strlcat.c  ft_strmapi.c  ft_strncpy.c  ft_strnequ.c  ft_strnew.c  ft_strnstr.c  ft_strrchr.c  ft_strsplit.c  ft_strstr.c  ft_strsub.c  ft_strtrim.c  ft_tolower.c  isdigit.c  isprint.c  lexer.c  list.c  (+47 more)
minishell.dSYM/Contents/Resources/DWARF/: minishell
srcs/: mini_dispatch.c  mini_echo.c  mini_env.c  mini_error.c  mini_exit.c  mini_init.c  mini_main.c  mini_parser.c  mini_print.c
