# cmake_minimum_required(VERSION <specify CMake version here>)
project(minishell)

set(CMAKE_CXX_STANDARD 14)

include_directories(incl)
include_directories(mini_lib/incl)

add_executable(minishell
		incl/minishell.h
		mini_lib/incl/mini_lib.h
		mini_lib/srcs/isalnum.c
		mini_lib/srcs/isalpha.c
		mini_lib/srcs/isascii.c
		mini_lib/srcs/isdigit.c
		mini_lib/srcs/isprint.c
		mini_lib/srcs/itoa.c
		mini_lib/srcs/itoa_base.c
		mini_lib/srcs/list.c
		mini_lib/srcs/lstadd.c
		mini_lib/srcs/lstdel.c
		mini_lib/srcs/lstdelone.c
		mini_lib/srcs/lstiter.c
		mini_lib/srcs/lstmap.c
		mini_lib/srcs/lstnew.c
		mini_lib/srcs/memalloc.c
		mini_lib/srcs/memccpy.c
		mini_lib/srcs/memcmp.c
		mini_lib/srcs/mini_atoi.c
		mini_lib/srcs/mini_bzero.c
		mini_lib/srcs/mini_getline.c
		mini_lib/srcs/mini_memchr.c
		mini_lib/srcs/mini_memcpy.c
		mini_lib/srcs/mini_memdel.c
		mini_lib/srcs/mini_memmove.c
		mini_lib/srcs/mini_memset.c
		mini_lib/srcs/mini_queue.c
		mini_lib/srcs/mini_stack.c
		mini_lib/srcs/mini_strcat.c
		mini_lib/srcs/mini_strcmp.c
		mini_lib/srcs/mini_strcpy.c
		mini_lib/srcs/mini_strlen.c
		mini_lib/srcs/node.c
		mini_lib/srcs/putchar.c
		mini_lib/srcs/putchar_fd.c
		mini_lib/srcs/putendl_fd.c
		mini_lib/srcs/putnbr.c
		mini_lib/srcs/putnbr_fd.c
		mini_lib/srcs/putstr.c
		mini_lib/srcs/putstr_fd.c
		mini_lib/srcs/strchr.c
		mini_lib/srcs/strclr.c
		mini_lib/srcs/strdel.c
		mini_lib/srcs/strdup.c
		mini_lib/srcs/strequ.c
		mini_lib/srcs/strings.c
		mini_lib/srcs/striter.c
		mini_lib/srcs/striteri.c
		mini_lib/srcs/strmap.c
		mini_lib/srcs/strmapi.c
		mini_lib/srcs/strncat.c
		mini_lib/srcs/strncpy.c
		mini_lib/srcs/strnequ.c
		mini_lib/srcs/strnew.c
		mini_lib/srcs/strnstr.c
		mini_lib/srcs/strrchr.c
		mini_lib/srcs/strsplit.c
		mini_lib/srcs/strstr.c
		mini_lib/srcs/strsub.c
		mini_lib/srcs/strtrim.c
		mini_lib/srcs/tolower.c
		mini_lib/srcs/toupper.c
		srcs/mini_cd.c
		srcs/mini_dispatch.c
		srcs/mini_echo.c
		srcs/mini_env.c
		srcs/mini_error.c
		srcs/mini_exec.c
		srcs/mini_exit.c
		srcs/mini_init.c
		srcs/mini_main.c
		srcs/mini_money.c
		srcs/mini_parser.c
		srcs/mini_print.c
		srcs/mini_tilde.c
		minishell)
